--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/sweetArizCider/WEB_SERVICES#readme",
   "dependencies": {
+    "axios": "^1.7.9",
     "express": "^4.21.2",
     "joi": "^17.13.3",
     "mysql2": "^3.12.0",
