--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
   },
   "homepage": "https://github.com/sweetArizCider/WEB_SERVICES#readme",
   "dependencies": {
+    "@sequelize/postgres": "^7.0.0-alpha.46",
     "axios": "^1.7.9",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "joi": "^17.13.3",
     "mysql2": "^3.12.0",
     "nodemon": "^3.1.9",
+    "pg": "^8.14.1",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.5",
     "sqlite3": "^5.1.7"
   }
