--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@sequelize/postgres": "^7.0.0-alpha.46",
     "axios": "^1.7.9",
     "body-parser": "^2.2.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
