--- a/utils/config.json
+++ b/utils/config.json
@@ -7,11 +7,12 @@
     },
     "server":{
         "corsOptions": {
-            "origin": "*",
+            "origin": "http://localhost:5173",
             "methods": "GET,HEAD,PUT,PATCH,POST,DELETE",
             "preflightContinue": false,
             "optionsSuccessStatus": 204,
-            "allowedHeaders": "Content-Type, Authorization, Content-Length, X-Requested-With"
+            "allowedHeaders": "Content-Type, Authorization, Content-Length, X-Requested-With, credentials",
+            "credentials": true
         }
     },
     "dev":{
